@@ -13,6 +13,7 @@ v3.8.0:
   - Fixing an error creating new outputs through the tiltserie viewer
   - Fixing an error plotting the defocus values in the ctfEstimation viewer
   - Import TS with mdoc: fix in the assignment of the initial dose.
+  - Assign Transformation Matrix: combine alignments removed. Some fixes at metadata level.
 Developers:
   - Attribute _acquisition is initialized as None in TSBase, so the coppyAttributes callen in protocol for joining.
     sets work properly. The same whith the attribute _origin.
